--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button class="modify-grid">Chose a Grid!</button>
     <div class="board"></div>
   </body>
 </html>
