--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <button class="modify-grid">Chose a Grid!</button>
+    <h1 class="title">Etch-a-Sketch</h1>
     <div class="board"></div>
+    <div class="options">
+      <button class="modify-grid">grid size</button>
+      <button class="reset-grid">reset</button>
+    </div>
   </body>
 </html>
