Add change style option

--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
       <button class="modify-grid">grid size</button>
       <button class="reset-grid">reset</button>
     </div>
+    <div class="themes">
+      <button id="red"></button>
+      <button id="yellow"></button>
+      <button id="green"></button>
+      <button id="blue"></button>
+    </div>
   </body>
 </html>
