--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
     <h1 class="title">Etch-a-Sketch</h1>
     <div class="board"></div>
     <div class="options">
-      <button class="modify-grid">grid size</button>
-      <button class="reset-grid">reset</button>
+      <button class="modify-grid">Grid Size</button>
+      <button class="reset-grid">Reset</button>
     </div>
     <div class="themes">
       <button id="red"></button>
       <button id="yellow"></button>
       <button id="green"></button>
       <button id="blue"></button>
+    </div>
+    <div class="footer">
+      <p id="footer-text">Made by me 🐔🍗</p>
     </div>
   </body>
 </html>
